@@ -57,6 +57,7 @@
 #include "tools/gt_csa.h"
 #include "tools/gt_congruence.h"
 #include "tools/gt_dev.h"
+#include "tools/gt_dupfeat.h"
 #include "tools/gt_eval.h"
 #include "tools/gt_extractfeat.h"
 #include "tools/gt_extractseq.h"
@@ -116,6 +117,7 @@ GtToolbox* gtt_tools(void)
   gt_toolbox_add_tool(tools, "csa", gt_csa());
   gt_toolbox_add_tool(tools, "congruence", gt_congruence());
   gt_toolbox_add_tool(tools, "dev", gt_dev());
+  gt_toolbox_add_tool(tools, "dupfeat", gt_dupfeat());
   gt_toolbox_add(tools, "eval", gt_eval);
   gt_toolbox_add_tool(tools, "extractfeat", gt_extractfeat());
   gt_toolbox_add_tool(tools, "extractseq", gt_extractseq());
